force-app/main/default/objects/SAID_Analysis__c/SAID_Analysis__c.object-meta.xml
<CustomObject>
    <label>SAID Analysis</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>SAID Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAID Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>