force-app/main/default/objects/SAID_Analysis__c/fields/Permanent_Resident__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Resident</label>
    <type>Checkbox</type>
</CustomField>