force-app/main/default/objects/SAID_Analysis__c/fields/SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>