force-app/main/default/objects/SAID_Analysis__c/fields/SAID__c.field-meta.xml
<CustomField>
    <fullName>SAID__c</fullName>
    <label>SAID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>